--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
         			<div class="col-lg-6 col-md-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p style="text-align: justify;">Mr. Islam has been with BGMEA University of Fashion and Technology since March 1, 2020. Prior to his current position, he worked as a Lecturer at Prime University for one year.</p>
-						<p style="text-align: justify;">Mr. Islam earned his bachelor's degree in Computer Science and Engineering from Rajshahi University of Engineering and Technology. He received his M.Sc. degree in Computer Science from Jahangirnagar University. Mr. Islam is currently pursuing an M.Sc. Engg. degree in Computer Science and Engineering at Bangladesh University of Engineering and Technology in order to quench his thirst for knowledge.</p>
+        					<p style="text-align: justify;">Mr. Islam has been with BGMEA University of Fashion and Technology since March 1, 2020. Prior to his current position, he worked as a Lecturer at Prime University for one year.<br>Mr. Islam earned his bachelor's degree in Computer Science and Engineering from Rajshahi University of Engineering and Technology. He received his M.Sc. degree in Computer Science from Jahangirnagar University. Mr. Islam is currently pursuing an M.Sc. Engg. degree in Computer Science and Engineering at Bangladesh University of Engineering and Technology in order to quench his thirst for knowledge.</p>
 							<div class="row projects-filter" style="text-align: center;">
 							<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
         							<ul class="wel_item filter list">
@@ -160,7 +159,7 @@
         					<h3><br><br>Skills</h3>
         					<div class="skill_main">
 							<div class="skill_item">
-								<h4 class="text-left"><b">Teaching</b> 
+								<h4 class="text-left"><b>Teaching</b> 
 								(<span class="counter">4</span> Years +).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow=90 aria-valuemin="0" aria-valuemax="100"></div>
@@ -346,9 +345,9 @@
         		<div class="projects_fillter">
 					<ul class="filter list">
 						<li class="active" data-filter="*"><a href="#">All Categories</a></li>
-						<li data-filter=".graduate_thesis"><a href="#">Graduate Thesis</a></li>
-						<li data-filter=".projects"><a href="#">Undergrad Projects</a></li>
-						<li data-filter=".other_projects"><a href="#">Others Projects</a></li>
+						<li data-filter=".graduate_thesis"><a href="#">Graduate Thesis/Project</a></li>
+						<!--li data-filter=".projects"><a href="#">Undergrad Projects</a></li-->
+						<!--li data-filter=".other_projects"><a href="#">Others Projects</a></li-->
 						<li data-filter=".thesis"><a href="#">Undergrad Thesis</a></li>
 						<li data-filter=".publications"><a href="#">Publications</a></li>
 						<li data-filter=".research"><a href="#">Research Works</a></li>
@@ -361,14 +360,14 @@
 <!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="#" target="_blank"><h4>Study on CNN based Transfer Learning in Image Classification</h4></a>
-								<p>Graduate Thesis</p>
+								<p>Graduate Thesis/Project</p>
 							</div>
 						</div>
 					</div>
 					
-					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
+					<!--div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
 						<div class="projects_item">
-<!-- 							<img class="img-fluid" src="img/projects/projects-1.jpg" alt=""> -->
+							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/Java_IDGenerator" target="_blank"><h4>Student ID Card Genarator</h4></a>
 								<p>Undergrad Project (Java)</p>
@@ -377,7 +376,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
 						<div class="projects_item">
-<!-- 							<img class="img-fluid" src="img/projects/projects-2.jpg" alt=""> -->
+							<img class="img-fluid" src="img/projects/projects-2.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/cse-ruet" target="_blank"><h4>CSE RUET</h4></a>
 								<p>Undergrad Project (Laravel-Web)</p>
@@ -386,7 +385,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
 						<div class="projects_item">
-<!-- 							<img class="img-fluid" src="img/projects/projects-3.jpg" alt=""> -->
+							<img class="img-fluid" src="img/projects/projects-3.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/student_ruet" target="_blank"><h4>STUDENT RUET</h4></a>
 								<p>Undergrad Project (Laravel-Web)</p>
@@ -395,19 +394,19 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 other_projects">
 						<div class="projects_item">
-<!-- 							<img class="img-fluid" src="img/projects/projects-4.jpg" alt=""> -->
+							<img class="img-fluid" src="img/projects/projects-4.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/Android_TouristEye" target="_blank"><h4>Tourist_Eye</h4></a>
 								<p>Hackathon 2019 Project (Android)</p>
 							</div>
 						</div>
-					</div>
+					</div-->
 					<div class="col-lg-3 col-md-4 col-sm-6 thesis research publications">
 						<div class="projects_item">
 <!-- 							<img class="img-fluid" src="img/projects/projects-5.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="#" target="_blank"><h4>Improving Patient Cohort Identification</h4></a>
-								<p>Undergrad Thesis</p>
+								<p>Undergrad Thesis; Publication (International Conference)</p>
 							</div>
 						</div>
 					</div>
@@ -420,9 +419,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 other_projects">
+					<!--div class="col-lg-3 col-md-4 col-sm-6 other_projects">
 						<div class="projects_item">
-<!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
+							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/online_bookstore" target="_blank"><h4>Online Bookstore</h4></a>
 								<p>Project (Laravel-Web)</p>
@@ -431,7 +430,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 other_Projects">
 						<div class="projects_item">
-<!-- 							<img class="img-fluid" src="img/projects/projects-8.jpg" alt=""> -->
+							<img class="img-fluid" src="img/projects/projects-8.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/Java_xBasic_Music-Player" target="_blank"><h4>Music Player</h4></a>
 								<p>Project (Java)</p>
@@ -440,13 +439,13 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 other_Projects">
 						<div class="projects_item">
-<!-- 							<img class="img-fluid" src="img/projects/projects-9.jpg" alt=""> -->
+							<img class="img-fluid" src="img/projects/projects-9.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/jahid-jabed.github.io" target="_blank"><h4>Personal Profile</h4></a>
 								<p>Project (Web)</p>
 							</div>
 						</div>
-					</div>
+					</div-->
 				</div>
         	</div>
         </section>
@@ -458,7 +457,7 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>Teaching Areas</h2>
-        			<p>I taught or currently teach the following courses.</p>
+        			<p>Mr. Islam has more than four years of expertise in teaching the following subject areas in Computer Science and Engineering, and others aligned Engineering -</p>
         		</div>
         		<div class="row latest_blog_inner">
         			<div class="col-lg-2 col-md-3 col-sm-4  col-6">
@@ -714,7 +713,7 @@
         <!--================End My Team Area =================-->
 		
 		<!--================Latest Courses Teach Area =================-->
-        <section class="latest_blog_area p_80">
+<!--         <section class="latest_blog_area p_80">
         	<div class="container">
         		<div class="main_title">
         			<h2>Certificates</h2>
@@ -723,10 +722,10 @@
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
         		</div>
         		<div class="row latest_blog_inner" style="text-align: center;">
-<!--         			<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
+        			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
+        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -734,11 +733,11 @@
         						</div>
         					</div>
         				</div>
-<!--         			</div> -->
-<!--         			<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
+        			</div>
+        			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
+        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -746,11 +745,11 @@
         						</div>
         					</div>
         				</div>
-<!--         			</div> -->
-<!--         			<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
+        			</div>
+        			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
+        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -758,11 +757,11 @@
         						</div>
         					</div>
         				</div>
-<!--         			</div> -->
-<!-- 					<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
+        			</div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
+        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -770,11 +769,11 @@
         						</div>
         					</div>
         				</div>
-<!--         			</div> -->
-<!-- 					<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
+        			</div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
+        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -782,11 +781,11 @@
         						</div>
         					</div>
         				</div>
-<!--         			</div> -->
-<!-- 					<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
+        			</div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
+        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -794,10 +793,10 @@
         						</div>
         					</div>
         				</div>
-<!--         			</div> -->
+        			</div>
         		</div>
         	</div>
-        </section>
+        </section> -->
         <!--================End Courses Teach Area =================-->
 		
 		<!--================Contact Area =================-->
