--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 						<li class="nav-item submenu dropdown">
 							<a href="#Works" onclick="location.href='#Works';" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Works</a>
 							<ul class="dropdown-menu filter">
-								<li class="nav-item" data-filter=".graduate_thesis"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Graduate Thesis</a></li>
+								<li class="nav-item" data-filter=".graduate_thesis"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Graduate Thesis/Project</a></li>
 								<li class="nav-item" data-filter=".thesis"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Undergrad Thesis</a></li>
-								<li class="nav-item" data-filter=".projects"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Undergrad Projects</a></li>
+								<!--li class="nav-item" data-filter=".projects"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Undergrad Projects</a></li-->
 								<li class="nav-item" data-filter=".publications"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Publications</a></li>
-								<li class="nav-item" data-filter=".research"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Research</a></li>
+								<li class="nav-item" data-filter=".research"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Research Works</a></li>
 							</ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="#Contact" onclick="location.href='#Contact';">Contact</a></li>
@@ -83,8 +83,8 @@
 							<h3>Hello, I'm</h3>
 							<h2>Md. Jahidul Islam</h2>
 							<h5>Lecturer, Department of Engineering</h5>
-							<h5><a href="http://buft.edu.bd/" target="_blank" style="text-decoration: none;">BGMEA University of Fashion and Technology (BUFT)</a></h5>
-							<!--a class="banner_btn" href="https://drive.google.com/open?id=1AXZlkn1xlxvfyEDL7EsATH_8Aec2D3cp" target="_blank">Download CV</a-->
+							<h5><a href="https://buft.edu.bd/" target="_blank" style="text-decoration: none;">BGMEA University of Fashion and Technology (BUFT)</a></h5>
+							<a class="banner_btn" href="https://buft.edu.bd/profile/JI" target="_blank">Academic Profile</a>
 						</div>
 					</div>
 				</div>
@@ -106,11 +106,11 @@
 							<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-graduation-hat"></i></li>
-        								<li><h4>1</h4></li>
+        								<li><h4>4</h4></li>
 									<li></li>
         								<li data-filter=".graduate_thesis">
 										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none; padding: 0px;">
-											Graduate</br>Project
+											Graduate</br>Thesis/Project
 										</a>
 									</li>
         							</ul>
@@ -222,6 +222,51 @@
 								</div>
 							</div>
 						</div>
+						<h3><br><br>Research Specialization</h3>
+        					<div class="skill_main">
+							<div class="skill_item">
+								<h4 class="text-left"><b>Natural Language Processing</b></h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow=75 aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b>Artificial Intelligence</b></h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow=90 aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b>Machine Learning</b></h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow=85 aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b>Deep Learning</b></h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow=90 aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b>Transfer Learning</b></h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow=85 aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b>Data Science</b></h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow=80 aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b>Network Science</b></h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow=70 aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+						</div>
         				</div>
         			</div>
         		</div>
@@ -275,10 +320,10 @@
 					<div class="feature_item">
 						<i class="flaticon-professor"></i>
 						<!--h4>M.Sc.</h4-->
-						<p><b></br>M.Sc., Bangladesh University of Engineering and Technology</b></p>
+						<p><b></br>M.Sc. Engg., Bangladesh University of Engineering and Technology</b></p>
 						<p></p>
 						<p><b></b>Computer Science and Engineering</p>
-						<p><b>CGPA:</b> N/A</p>
+						<p><b>CGPA:</b> 3.50 (Expected-Minimum)</p>
 						<p><b>Position:</b> N/A</p>
 						<p><b>Passing Year:</b> Ongoing</p>
 					<!--/div>
@@ -359,6 +404,42 @@
 						<div class="projects_item">
 <!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
 							<div class="projects_text">
+								<a href="https://dataparadox.github.io/iTrustBD/" target="_blank"><h4>Study and Analysis of the BTC-Alpha Network to Identify Influence of Trust Behavior Dynamics</h4></a>
+								<p>Graduate Project</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 research graduate_thesis">
+						<div class="projects_item">
+<!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
+							<div class="projects_text">
+								<a href="https://jahid-jabed.github.io/mh_opt_tl_covid19/" target="_blank"><h4>Genetic optimization of deep CNN based transfer learning for COVID-19 identification from radiography chest X-Rays</h4></a>
+								<p>Graduate Project</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 research graduate_thesis">
+						<div class="projects_item">
+<!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
+							<div class="projects_text">
+								<a href="https://jahid-jabed.github.io/ratings_cal_zoom/" target="_blank"><h4>Actual Rating Calculation of the Zoom Cloud Meetings App using User Reviews on Google Play Store with Sentiment Annotation of BERT and Hybridization of RNN and LSTM</h4></a>
+								<p>Graduate Project</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 research graduate_thesis">
+						<div class="projects_item">
+<!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
+							<div class="projects_text">
+								<a href="https://jahid-jabed.github.io/data_mining/" target="_blank"><h4>A Comparative Study on Random Forests and Deep CNN-Based Learning Techniques with and without Random Forests as Classifer for COVID-19 Identifcation from Radiography X-Ray Images.</h4></a>
+								<p>Graduate Project</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 research graduate_thesis">
+						<div class="projects_item">
+<!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
+							<div class="projects_text">
 								<a href="#" target="_blank"><h4>Study on CNN based Transfer Learning in Image Classification</h4></a>
 								<p>Graduate Thesis/Project</p>
 							</div>
@@ -405,7 +486,7 @@
 						<div class="projects_item">
 <!-- 							<img class="img-fluid" src="img/projects/projects-5.jpg" alt=""> -->
 							<div class="projects_text">
-								<a href="#" target="_blank"><h4>Improving Patient Cohort Identification</h4></a>
+								<a href="https://ieeexplore.ieee.org/document/9303568" target="_blank"><h4>Improving Patient Cohort Identification using Neural Word Embedding with Structured Analysis</h4></a>
 								<p>Undergrad Thesis; Publication (International Conference)</p>
 							</div>
 						</div>
@@ -414,7 +495,7 @@
 						<div class="projects_item">
 <!-- 							<img class="img-fluid" src="img/projects/projects-6.jpg" alt=""> -->
 							<div class="projects_text">
-								<a href="https://ieeexplore.ieee.org/document/8289090" target="_blank"><h4>The 12B8T Line Coding</h4></a>
+								<a href="https://ieeexplore.ieee.org/document/8289090" target="_blank"><h4>The 12B8T multilevel line coding scheme in digital to digital data conversion</h4></a>
 								<p>Publication (International Conference)</p>
 							</div>
 						</div>
