--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<h2>Md. Jahidul Islam</h2>
 							<h5>Lecturer, Department of Engineering</h5>
 							<h5><a href="https://buft.edu.bd/" target="_blank" style="text-decoration: none;">BGMEA University of Fashion and Technology (BUFT)</a></h5>
-							<a class="banner_btn" href="https://buft.edu.bd/profile/JI" target="_blank">Academic Profile</a>
+							<a class="banner_btn btn btn-info" type="button" href="https://buft.edu.bd/profile/JI" target="_blank">Academic Profile</a>
 						</div>
 					</div>
 				</div>
@@ -98,7 +98,7 @@
         <section class="welcome_area p_80" id="About">
         	<div class="container">
         		<div class="row welcome_inner justify-content-center">
-        			<div class="col-lg-6 col-md-6">
+        			<div class="col-lg-4 col-md-4">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
         					<p style="text-align: justify;">Mr. Islam has been with BGMEA University of Fashion and Technology since March 1, 2020. Prior to his current position, he worked as a Lecturer at Prime University for one year.<br>Mr. Islam earned his bachelor's degree in Computer Science and Engineering from Rajshahi University of Engineering and Technology. He received his M.Sc. degree in Computer Science from Jahangirnagar University. Mr. Islam is currently pursuing an M.Sc. Engg. degree in Computer Science and Engineering at Bangladesh University of Engineering and Technology in order to quench his thirst for knowledge.</p>
@@ -154,7 +154,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-6 col-md-6">
+        			<div class="col-lg-4 col-md-4">
         				<div class="tools_expert">
         					<h3><br><br>Skills</h3>
         					<div class="skill_main">
@@ -222,6 +222,10 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-4">
+        				<div class="tools_expert">
 						<h3><br><br>Research Specialization</h3>
         					<div class="skill_main">
 							<div class="skill_item">
@@ -231,25 +235,13 @@
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4 class="text-left"><b>Artificial Intelligence</b></h4>
+								<h4 class="text-left"><b>Artificial Intelligence; Machine Learning</b></h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow=90 aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4 class="text-left"><b>Machine Learning</b></h4>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow=85 aria-valuemin="0" aria-valuemax="100"></div>
-								</div>
-							</div>
-							<div class="skill_item">
-								<h4 class="text-left"><b>Deep Learning</b></h4>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow=90 aria-valuemin="0" aria-valuemax="100"></div>
-								</div>
-							</div>
-							<div class="skill_item">
-								<h4 class="text-left"><b>Transfer Learning</b></h4>
+								<h4 class="text-left"><b>Deep Learning; Transfer Learning</b></h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow=85 aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
